# rag_systems_lab

./: Dockerfile  README.md  docker  docker-compose.yml  main.py  pyproject.toml
airflow/: dockerfile  entrypoint.sh
