[project]
name = "rag-systems-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.17.0",
    "docling>=2.58.0",
    "fastapi>=0.120.0",
    "gradio>=5.23.1",
    "httpx>=0.28.1",
    "langfuse>=3.8.1",
    "opensearch-py>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "redis>=7.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
